# hik_ros2_task4

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hik_camera/lib/hik_camera/: hik_camera_node
install/hik_camera/share/hik_camera/: package.sh
install/hik_camera/share/hik_camera/launch/: camera.launch.py
log/: latest_build
src/hik_camera/: CMakeLists.txt  package.xml
src/hik_camera/config/: hik_camera_params.yaml
src/hik_camera/include/hik_camera/: hik_camera_node.hpp
src/hik_camera/src/: hik_camera_node.cpp  main.cpp
